[package]
name = "seavan"
version = "0.0.0"
authors = [
    "Max Dymond <cmeister2@gmail.com>",
]
edition = "2018"
license = "MIT"
description = "Wrap files in single container layers for later composition"
homepage = "https://github.com/cmeister2/seavan"
repository = "https://github.com/cmeister2/seavan"
readme = "README.md"
keywords = ["docker"]
categories = ["filesystem", "virtualization"]

[dependencies]
log = "0.4.17"
regex = "1.7.0"
sha2 = "0.10.6"
tempfile = "3.3.0"
thiserror = "1.0.37"

[dev-dependencies]
env_logger = "0.11.0"

[features]
